--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.temp_bg{
+    @apply bg-[#8EC5FC] h-full bg-gradient-to-br from-blue-300 to-purple-300;
+}
